# agentguard-ai

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
config/: control_library.yaml  demo_cases.yaml  framework_mapping.yaml  report_template.md  risk_taxonomy.yaml  rules.yaml
docs/: control_library.md  framework_mapping.md  github_about.md  methodology.md  risk_taxonomy.md  roadmap.md  safety_boundaries.md  workflow_schema.json  workflow_schema.md
examples/sample_outputs/: customer_support_email_agent_assessment.json  developer_code_agent_assessment.json  financial_advisor_copilot_assessment.json  high_risk_autonomous_agent_assessment.json  market_intelligence_agent_assessment.json
examples/sample_reports/: customer_support_email_agent_assessment.md  developer_code_agent_assessment.md  financial_advisor_copilot_assessment.md  high_risk_autonomous_agent_assessment.md  market_intelligence_agent_assessment.md
examples/workflows/: customer_support_email_agent.json  developer_code_agent.json  financial_advisor_copilot.json  high_risk_autonomous_agent.json  market_intelligence_agent.json
scripts/: run_demo.py  verify_line_endings.py
src/agentguard/: __init__.py  config.py  main.py  models.py
src/agentguard/assessment/: __init__.py  control_mapper.py  normalize.py  recommendations.py  report_builder.py  risk_engine.py  scoring.py
src/agentguard/dashboard/: app.py  (+1 more)
tests/: test_cli.py  test_cli_assess.py  test_config_validation.py  test_control_mapper.py  test_control_mapping.py  test_dashboard_helpers.py  test_framework_mapping.py  test_markdown_escaping.py  test_models.py  test_report_generation.py  test_risk_engine.py  test_scoring.py  test_version.py  test_workflow_validation.py
(+7 files in other folders)
