[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard-ai"
version = "0.1.0"
description = "Local-first AI agent workflow risk auditor."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AgentGuard AI" }
]
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "pandas>=2.0",
  "Jinja2>=3.1",
  "markdown>=3.4",
  "streamlit>=1.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
agentguard = "agentguard.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
