[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard-ai"
version = "0.2.0"
description = "Local-first AI agent workflow risk auditor."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AgentGuard AI" }
]
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "numpy>=1.26,<2.0",
  "pandas>=2.0,<3.0",
  "Jinja2>=3.1",
  "markdown>=3.4",
  "streamlit>=1.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
]

[project.scripts]
agentguard = "agentguard.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict = false
